--- a/resources.html
+++ b/resources.html
@@ -175,7 +175,7 @@
       <br><b>Search icons</b>
       <br><a  href="https://thenounproject.com/search/?q=stores&i=1843551" target="_blank">
       Store icon <img src="images/link.png" alt="link" width="15" height="auto"> </a>
-      <br><br> Artist: Jony 
+      <br><br> Artist: Jony
       <br> <a  href="https://thenounproject.com/search/?q=More&i=489249" target="_blank">
       Settings icon<img src="images/link.png" alt="link" width="15" height="auto"> </a>
       <br><br> Artist: Roselin Christina.S
@@ -202,7 +202,7 @@
       <br><b>Navigation icons</b>
       <br><a  href="https://thenounproject.com/search/?q=stores&i=1843551" target="_blank">
       Store icon <img src="images/link.png" alt="link" width="15" height="auto"> </a>
-      <br><br> Artist: Jony 
+      <br><br> Artist: Jony
       <br> <a  href="https://thenounproject.com/search/?q=More&i=489249" target="_blank">
       Settings icon<img src="images/link.png" alt="link" width="15" height="auto"> </a>
       <br><br> Artist: Roselin Christina.S
@@ -210,7 +210,7 @@
       <br><b>Other icons</b>
       <br><a  href="https://thenounproject.com/search/?q=star&i=1359493" target="_blank">
       Star icon <img src="images/link.png" alt="link" width="15" height="auto"> </a>
-      <br><br> Artist: Mona Sharma 
+      <br><br> Artist: Mona Sharma
       <br> <a  href="https://thenounproject.com/search/?q=pluss&i=3422544" target="_blank">
       Pluss icon<img src="images/link.png" alt="link" width="15" height="auto"> </a>
       <br><br> Artist: Lagot Design
@@ -233,7 +233,7 @@
       <br><br> Artist: Yeong Rong Kim
       <br><br> Date accessed: 23/11/2020
     </li>
-    
+
 
 
       </ol>
@@ -243,7 +243,7 @@
 
   <footer class="footer">
     <div class="footer-resources">
-      <a href="resources.html">References</a>
+      <a class="active" href="resources.html">References</a>
     </div>
     <div class="logo">
       <a href="index.html"><img src="images/logowhite.png" alt="Logo" height="70" width="auto"></a>
