--- a/team.html
+++ b/team.html
@@ -67,7 +67,7 @@
       <a href="index.html"><img src="images/logowhite.png" alt="Logo" height="70" width="auto"></a>
     </div>
     <div class="footer-team">
-      <a href="team.html">Team members</a>
+      <a class="active" href="team.html">Team members</a>
     </div>
   </footer>
 </body>
