veldig finpuss på teksten

--- a/problem.html
+++ b/problem.html
@@ -52,10 +52,10 @@
               distance to other people. Doing necessary chores, such
               as going to the grocery store, can make it difficult to keep
               distance to the other shoppers if the store is crowded. This is also a big challenge for
-              indoor spaces that are open to the public. They need
+              other indoor spaces that are open to the public. They need
               regulations to ensure that there are not too many people
               inside the area at the same time: be it a library, grocery
-              store or a gym.</p><br>
+              store, or a gym.</p><br>
             </div>
             <div class="flex-challenge-right">
               <img src="images/distance.png" alt="Measures to prevent Covid-19" width="500" height="auto">
