--- a/prototype.html
+++ b/prototype.html
@@ -74,7 +74,6 @@
         </div>
     </section>
     <section class="prototype darkDiv">
-        <h1 class="divices_txt"> The app explained </h1>
         <div class="app_img wrapper_right">
             <img src="images/prototype/1Home.png" alt="Home page">
         </div>
@@ -95,7 +94,7 @@
             <img src="images/prototype/2Home_Search.png" alt="Search for public place">
         </div>
         <div class="app_txt wrapper_right">
-            <h1>Search for a public place</h1>
+            <h1>Public place information</h1>
             <p>
                 If you already know the name of the place that you want to visit,
                 you can use the search function to find the place by typing in the name.
@@ -109,7 +108,7 @@
     </section>
     <section class="prototype darkDiv">
         <div class="app_txt wrapper_left">
-            <h1>Public place information</h1>
+            <h1>Detailed information</h1>
             <p>
                 When you've chosen a specific place, the app will provide the total capacity
                 of the place, as well as the number of people there in real time.
@@ -123,7 +122,6 @@
         </div>
     </section>
     <section class="prototype">
-      <h1 class="divices_txt"> Other app features </h1>
         <div class="app_img wrapper_left">
             <img class="app_img" src="images/prototype/4My%20Stores.png" alt="Add yout store and get list overyour favourite places">
         </div>
