--- a/solution.html
+++ b/solution.html
@@ -37,7 +37,8 @@
           <img src="images/keepdistance.png" alt="Illustration of people keeping distance" width="600" heigth="auto">
         </div>
         <div class="topflex-solright">
-          <p>Keep distance<br>to care<br>for each other</p>
+          <!--<p>Keep distance<br>to care<br>for each other</p>-->
+          <h3>Keep distance to care for each other</h3>
         </div>
       </div>
 
