Fikset opp mellomrommet mellom divene...

--- a/prototype.html
+++ b/prototype.html
@@ -43,7 +43,7 @@
                 The HowCrowded provides a dual solution for people and organizations to make social distancing a breeze.<br>
             </h1>
     </div>
-    <section class="prototype">
+    <section class="prototype sensor_proto">
         <div class="app_txt wrapper_left">
             <h1>Sensors </h1>
             <p>
@@ -78,7 +78,7 @@
             <img src="images/prototype/1Home.png" alt="Home page">
         </div>
         <div class="app_txt wrapper_left">
-          <p>
+          <p class="home_txt">
               When opening the app, this is the first page you will see.
               At this page, you have multiple ways to choose the public place you want
               information about.
